--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,4 +13,4 @@ galaxy_info:
      versions:
       - 7
 dependencies:
-  - { role: cns.role-sqlserver-server }
+  - { role: cnstechnicalgroup.role-sqlserver-server }
