added in Ubuntu Xenial platform

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,5 +12,8 @@ galaxy_info:
    - name: EL
      versions:
       - 7
+   - name: Ubuntu
+     versions:
+      - xenial
 dependencies:
   - { role: cnstechnicalgroup.sqlserver-server }
