--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,6 +15,15 @@
 
 - name: Ensure mssql HA installed
   yum: name=mssql-server-ha state=present
+  when:  ansible_os_family == "CentOS"
+
+- name: Install the package "mssql-server-ha"
+  apt:
+    name: mssql-server-ha
+    allow_unauthenticated: true
+    update_cache: yes
+    state: present
+  when:  ansible_os_family == "Debian"
 
 - name: Stop sql server if it was already running and initialized
   service: name=mssql-server state=stopped
@@ -30,6 +39,7 @@
     state: enabled
     zone: public
   notify: restart-firewalld
+  when:  ansible_os_family == "CentOS"
 
 - name: Start sql server
   service: name=mssql-server state=started enabled=yes
